Deployment/webapi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commerceflow-webapi
  namespace: commerceflow
spec:
  selector:
    app: commerceflow-webapi
  type: LoadBalancer
  ports:
    - port: 2001 # Porta exposta pelo Service
      targetPort: 8080 # Porta onde o container está ouvindo
      # nodePort: 30001 # Porta no nó para acessar o serviço externamente (opcional, pode ser omitida para alocação automática)
