Deployment/webapi/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: commerceflow-webapi
  namespace: commerceflow
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: commerceflow.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: commerceflow-webapi
                port:
                  number: 2001
  # Descomente a seção abaixo se desejar adicionar TLS/HTTPS
  # tls:
  #  - hosts:
  #       - commerceflow.local
  #     secretName: webapi-tls
